fix: fixed boxes going out of frame because they were not wraping

--- a/frontend/src/pages/approveCadetAccountPage/ApproveCadetAccountPage.css
+++ b/frontend/src/pages/approveCadetAccountPage/ApproveCadetAccountPage.css
@@ -33,6 +33,7 @@
     margin-inline: 3rem;
     display: flex;
     gap: 1rem;
+    flex-wrap: wrap;
 }
 
 .ApproveCadetAccountPage .errorMessage {
